force-app/main/default/objects/Employee__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <label>Date of birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>