force-app/main/default/objects/Employee__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Mobile Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>