force-app/main/default/objects/Employee__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <formula>IMAGE(PhotoURL__c, &apos;No Candidate Photo&apos;, 250, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo</label>
    <type>Text</type>
</CustomField>