force-app/main/default/objects/Employee__c/fields/PhotoURL__c.field-meta.xml
<CustomField>
    <fullName>PhotoURL__c</fullName>
    <label>Photo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>