force-app/main/default/objects/Employee__c/fields/SalaryExpectations__c.field-meta.xml
<CustomField>
    <fullName>SalaryExpectations__c</fullName>
    <label>Salary Expectations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>